unpackaged/main/default/objects/Vehicle__c/fields/MA_Live_IoT_Device__c.field-meta.xml
<CustomField>
    <fullName>MA_Live_IoT_Device__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MA Live IoT Device</label>
    <referenceTo>malive__IoTDevice__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>