unpackaged/main/default/objects/Vehicle__c/fields/Max_Speed_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Max_Speed_Threshold__c</fullName>
    <label>Max Speed Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>