unpackaged/main/default/objects/Vehicle__c/fields/operator__c.field-meta.xml
<CustomField>
    <fullName>operator__c</fullName>
    <label>Operator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>