unpackaged/main/default/objects/Vehicle__c/fields/Plate__c.field-meta.xml
<CustomField>
    <fullName>Plate__c</fullName>
    <label>Plate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>