unpackaged/main/default/objects/Vehicle__c/fields/Samsara_Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Samsara_Vehicle_ID__c</fullName>
    <externalId>true</externalId>
    <label>Samsara Vehicle ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>