unpackaged/main/default/objects/Vehicle__c/fields/Transponder_ID__c.field-meta.xml
<CustomField>
    <fullName>Transponder_ID__c</fullName>
    <label>Transponder ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>