unpackaged/main/default/objects/Vehicle__c/recordTypes/Files.recordType-meta.xml
<RecordType>
    <fullName>Files</fullName>
    <active>true</active>
    <description>Reg, insurance, or other required files</description>
    <label>Files</label>
</RecordType>