unpackaged/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Driver__c</columns>
    <columns>MA_Live_IoT_Device__c</columns>
    <columns>Year__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Plate__c</columns>
    <columns>VIN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>