unpackaged/main/default/objects/Vehicle__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>MA_Live_IoT_Device__c</columns>
    <columns>Driver__c</columns>
    <columns>Make__c</columns>
    <columns>Plate__c</columns>
    <columns>VIN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>