unpackaged/main/default/objects/Vehicle__c/listViews/Sales_Corporate_Equipment.listView-meta.xml
<ListView>
    <fullName>Sales_Corporate_Equipment</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>operator__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Type__c</field>
        <operation>equals</operation>
        <value>Sales Vehicle,Corporate Vehicle,Equipment/Trailer</value>
    </filters>
    <label>Sales/Corporate/Equipment</label>
</ListView>