unpackaged/main/default/objects/Vehicle__c/listViews/Trucks.listView-meta.xml
<ListView>
    <fullName>Trucks</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Driver__c</columns>
    <columns>Description__c</columns>
    <columns>operator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Type__c</field>
        <operation>equals</operation>
        <value>Truck</value>
    </filters>
    <label>Trucks</label>
</ListView>